# aoc22

./: .ghci  .gitignore  Cargo.toml  aoc22.cabal
.github/workflows/: haskell.yml  pipeline.yml  rust.yml
apl/: day01.dyalog
app/: Main.hs
inputs/: Day03.test  day04.input
src/: AoC.hs  Day.hs  Parsers.hs  lib.rs  main.rs
src/Day/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day13.hs
src/day/: day01.rs  day02.rs  dayXX.rs
src/days/: day01.rs  day02.rs  day11.rs  dayXX.rs  mod.rs
test/: DayTests.hs  DaysSpec.hs
