cabal-version: 3.4
name: aoc22
version: 0.1.0.0
author: Sondre Aasemoen
maintainer: sondre@eons.io
license: MIT
license-file: LICENSE
homepage: https://www.eons.io
tested-with: GHC ==9.2.5
extra-source-files: README.md
build-type: Simple

common config
  build-depends: base ^>=4.16
  default-language: GHC2021  
  default-extensions: DerivingStrategies DuplicateRecordFields LambdaCase MultiWayIf OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -Werror=missing-deriving-strategies
    -fwrite-ide-info
    -Wunused-packages

library
  import: config
  hs-source-dirs: src
  exposed-modules:
    AoC
    Day
    Day.Day01
    Day.Day02
    Day.Day03
    Day.Day04
    Day.Day05
    Day.Day06
    Day.Day07
    Day.Day13
    Parsers

  build-depends:
    , clock ^>=0.8
    , containers ^>=0.6
    , formatting ^>=7.2
    , megaparsec ^>=9.3
    , parser-combinators ^>=1.3
    , mtl ^>=2.3
    , split ^>=0.2
    , text ^>=2

executable aoc
  import: config
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: aoc22, text ^>=2

test-suite aoc22-test
  import: config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: DaysSpec
  build-depends: aoc22, hspec ^>=2.10
  build-tool-depends: hspec-discover:hspec-discover ^>=2.10
